--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-example",
   "version": "1.0.0",
   "description": "This example is so cool.",
-  "main": "web.js",
+  "engines":{
+    "node": "17.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev":  "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
