--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-example",
   "version": "1.0.0",
   "description": "This example is so cool.",
-  "engines":{
-    "node": "17.4.0"
-  },
+//  "engines":{
+//    "node": "17.4.0"
+//  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev":  "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
