--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "This example is so cool.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":  "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "build": "npm install && tailwindcss -i ./src/input.css -o ./dist/output.css",
     "start": "serve"
   },
   "devDependencies": {
+    "serve": "^13.0.2",
     "tailwindcss": "^3.0.18"
   }
 }
