--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-example",
   "version": "1.0.0",
   "description": "This example is so cool.",
+  "engines": {
+    "node": "17.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
