--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This example is so cool.",
   "engines": {
-    "node": "17.0.4"
+    "node": "16.13.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
