--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "tailwindcss -i ./src/input.css -o ./dist/output.css",
     "start": "serve"
   },
+  "dependencies": {
+    "serve": "^13.0.2"
+  },
   "devDependencies": {
-    "serve": "^13.0.2",
     "tailwindcss": "^3.0.18"
   }
 }
