--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "start": "serve"
   },
   "dependencies": {
-    "serve": "^13.0.2"
-  },
-  "devDependencies": {
+    "serve": "^13.0.2",
     "tailwindcss": "^3.0.18"
   }
 }
