--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tailwindcss -c ./tailwind.config.js -i ./src/input.css -o ./dist/output.css --watch",
-    "build": "tailwindcss -c ./tailwind.config.js -i ./src/input.css -o ./dist/output.css",
+    "build": "node qr-gen.js && tailwindcss -c ./tailwind.config.js -i ./src/input.css -o ./dist/output.css",
     "start": "serve"
   },
   "dependencies": {
     "serve": "^13.0.2",
     "tailwindcss": "^3.0.18"
+  },
+  "devDependencies": {
+    "qrcode": "^1.5.0"
   }
 }
